# redstone_accounting

./: Lennart_solution.ipynb  README.md  pyproject.toml  solution.ipynb
data/: Easy1_Solution.xlsx  easy.xlsx  easy2.xlsx  hard.xlsx  medium.xlsx  testdata.xlsx
