[tool.poetry]
name = "redstone-accounting"
version = "0.1.0"
description = ""
authors = ["paulburkhardt <92929336+paulburkhardt@users.noreply.github.com>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "3.11.4"
pandas = "^2.1.2"
openpyxl = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
